results/data_generation_1720811026.log
  File "/app/ips_MaxRiffiAslett/data/megapixel_mnist/PineneedleMegaMNIST.py", line 246
    default=,
            ^
SyntaxError: invalid syntax
